Add Group class and change Client and MailGroup accordingly.